--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -132,8 +132,8 @@ android {
     splits {
         abi {
             enable true
-            reset()
-            include "armeabi-v7a", "arm64-v8a", "x86", "x86_64"
+            reset() 
+            include 'arm64-v8a'
             universalApk false
         }
     }
