--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "axios": "^1.9.0",
     "expo": "~53.0.8",
     "expo-blur": "~14.1.4",
+    "expo-build-properties": "^0.14.6",
     "expo-constants": "~17.1.5",
     "expo-font": "~13.3.1",
     "expo-haptics": "~14.1.4",
