--- a/package.json
+++ b/package.json
@@ -56,6 +56,11 @@
     "prettier": "^3.5.3",
     "typescript": "~5.8.3"
   },
+  "husky": {
+    "hooks": {
+      "pre-commit": "lint-staged"
+    }
+  },
   "lint-staged": {
     "*.{ts,tsx}": [
       "npm run lint"
