--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "ios": "expo run:ios",
     "web": "expo start --web",
     "lint": "expo lint",
-    "prepare": "husky install"
+    "prepare": "husky && husky install"
   },
   "dependencies": {
     "@expo/vector-icons": "^14.1.0",
@@ -50,7 +50,7 @@
     "@types/react": "~19.0.10",
     "eslint": "^9.26.0",
     "eslint-config-expo": "~9.2.0",
-    "husky": "^9.1.7",
+    "husky": "^8.0.0",
     "jest": "^29.7.0",
     "lint-staged": "^15.5.2",
     "prettier": "^3.5.3",
