--- a/package.json
+++ b/package.json
@@ -47,10 +47,13 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@react-native-community/eslint-config": "^3.2.0",
     "@types/react": "~19.0.10",
     "eslint": "^9.26.0",
     "eslint-config-expo": "~9.2.0",
-    "husky": "^8.0.0",
+    "eslint-config-prettier": "^10.1.3",
+    "eslint-plugin-prettier": "^5.4.0",
+    "husky": "^8.0.3",
     "jest": "^29.7.0",
     "lint-staged": "^15.5.2",
     "prettier": "^3.5.3",
