--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "@expo/vector-icons": "^14.1.0",
     "@hookform/resolvers": "^5.0.1",
     "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-navigation/drawer": "^7.3.12",
     "@reduxjs/toolkit": "^2.7.0",
     "axios": "^1.9.0",
     "expo": "~53.0.8",
